syntax = "proto3";

package icq.v1;

option go_package = "github.com/cosmos/ibc-apps/modules/async-icq/v8/types";

import "google/api/annotations.proto";
import "icq/v1/icq.proto";

// Query provides defines the gRPC querier service.
service Query {
  // Params queries all parameters of the ICQ module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/async-icq/v1/params";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1;
}